Made batch script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,4 +51,7 @@ batch:
    links:
       - kafka:kafka
       - es:es
+   volumes:
+      - .:/app
+   command: bash -c "python /app/batch/script.py"
 
