--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ exp:
   container_name: proj_exp
   links:
       - models:models-api
+      - kafka:kafka
+      - es:es
   ports:
       - "8002:8000"
   volumes:
