--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 cache: pip
 
 install:
+  - pip install django
+  - pip install selenium
   - pip install requests
   - pip install django-mysql
 
