--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 cache: pip
 
 install:
-  - pip install django
+  - pip install django==1.10
   - pip install selenium
   - pip install requests
   - pip install django-mysql
