--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install selenium
   - pip install requests
   - pip install django-mysql
-  - pip install mysql-python
+  - pip install mysqlclient
 
 branches:
   only:
