Added 3 web containers and made changes to haproxy.cfg. Haproxy in docker-compose can't find haproxy.cfg yet

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -14,3 +14,6 @@ frontend http-in
 
 backend servers
     server server1 web:8000 check
+    server server2 web1:8003 check
+    server server3 web2:8004 check
+    server server4 web3:8005 check
