Added chrome drivers to travis pip installs

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ env:
 
 install:
   - pip install django==1.10
-  - pip install selenium
+  - pip install selenium==3.7.0
+  - pip install chromedriver_installer
+  - pip install chromedriver-binary
   - pip install requests
   - pip install django-mysql
   - pip install mysqlclient
