Changed haproxy ports so it displays on papertrail

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,16 +1,21 @@
 global
     daemon
     maxconn 256
+    log logs3.papertrailapp.com:36750 local0
+    log-send-hostname
 
 defaults
     mode http
     timeout connect 5000ms
     timeout client 50000ms
     timeout server 50000ms
+    option httplog
 
 frontend http-in
-    bind *:8000
+    bind *:80
+    log global
     default_backend servers
+    option httplog
 
 backend servers
     server server1 web:8000 check
