--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ models:
     - .:/app
   ports:
     - "8001:8000"
-  command: bash -c "pip install django-mysql && python /app/models/manage.py makemigrations api && python /app/models/manage.py migrate && python /app/models/manage.py loaddata /app/models/db.json && python /app/models/manage.py test api && mod_wsgi-express start-server --working-directory /app/models --reload-on-changes /app/models/models/wsgi.py"
+  command: bash -c "pip install requests && pip install django-mysql && python /app/models/manage.py makemigrations api && python /app/models/manage.py migrate && python /app/models/manage.py loaddata /app/models/db.json && python /app/models/manage.py test api && mod_wsgi-express start-server --working-directory /app/models --reload-on-changes /app/models/models/wsgi.py"
 
 exp:
   image: tp33/django
@@ -32,7 +32,7 @@ web:
       - "8000:8000"
   volumes:
       - .:/app
-  command: bash -c "pip install --upgrade django==1.11 && pip install redis==2.10.0 && pip install django-redis && pip install requests && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
+  command: bash -c "pip install requests && pip install --upgrade django==1.11 && pip install redis==2.10.0 && pip install django-redis && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
 
 web1:
   container_name: web1
@@ -44,7 +44,7 @@ web1:
       - "8003:8000"
   volumes:
       - .:/app
-  command: bash -c "pip install --upgrade django==1.11  && pip install redis==2.10.0 && pip install django-redis && pip install requests && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
+  command: bash -c "pip install requests && pip install --upgrade django==1.11  && pip install redis==2.10.0 && pip install django-redis && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
 
 web2:
   container_name: web2
@@ -56,7 +56,7 @@ web2:
       - "8004:8000"
   volumes:
       - .:/app
-  command: bash -c "pip install --upgrade django==1.11 && pip install redis==2.10.0 && pip install django-redis && pip install requests && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
+  command: bash -c "pip install requests && pip install --upgrade django==1.11 && pip install redis==2.10.0 && pip install django-redis && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
 
 web3:
   container_name: web3
@@ -68,7 +68,7 @@ web3:
       - "8005:8000"
   volumes:
       - .:/app
-  command: bash -c "pip install --upgrade django==1.11 && pip install redis==2.10.0 && pip install django-redis && pip install django-redis && pip install requests && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
+  command: bash -c "pip install requests && pip install --upgrade django==1.11 && pip install redis==2.10.0 && pip install django-redis && mod_wsgi-express start-server --working-directory /app/web --reload-on-changes --log-to-terminal /app/web/web/wsgi.py"
 
 kafka:
    image: spotify/kafka
@@ -179,7 +179,14 @@ spark-worker:
     - 8081:8081
   volumes:
     - ./data:/tmp/data
-  #command: bash -c "python /tmp/data/coview_script.py"
 
+spark-batch:
+   image: tp33/django
+   container_name: spark-batch
+   links:
+      - kafka:kafka
+   volumes:
+      - ./data:/tmp/data
+   command: bash -c "python /tmp/data/script.py"
 
 
