Pair programmed with Brady and Taehyun.  Added co-view, shell script, spark script, and populated database recommendations table with recommended items

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,10 +134,13 @@ spark-master:
   image: gettyimages/spark
   command: bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
   container_name: spark-master
+  external_links:
+    - mysql:db
   hostname: spark-master
   environment:
     MASTER: spark://spark-master:7077
     SPARK_CONF_DIR: /conf
+
   expose:
     - 7001
     - 7002
@@ -159,6 +162,8 @@ spark-worker:
   image: gettyimages/spark
   command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
   container_name: spark-worker
+  external_links:
+    - mysql:db
   hostname: spark-worker
   environment:
     SPARK_CONF_DIR: /conf
